--- a/Extension/styles.css
+++ b/Extension/styles.css
@@ -18,9 +18,21 @@ body {
 .input {
     margin: 5px 10px 20px 20px;
     padding: 10px 15px;
+    font-weight: bold;
     background-color: #007bff;
     color: white;
     border: none;
+    width: 120px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.delete-btn {
+    margin: 5px 10px 20px 10px;
+    padding: 10px 15px;
+    border: 1px solid #007bff;
+    color: #007bff;
+    font-weight: bold;
     width: 120px;
     border-radius: 5px;
     cursor: pointer;
