--- a/Extension/styles.css
+++ b/Extension/styles.css
@@ -15,7 +15,7 @@ body {
     border-radius: 5px;
 }
 
-.input {
+.input, .delete-btn {
     margin: 5px 10px 20px 20px;
     padding: 10px 15px;
     font-weight: bold;
@@ -28,14 +28,9 @@ body {
 }
 
 .delete-btn {
-    margin: 5px 10px 20px 10px;
-    padding: 10px 15px;
     border: 1px solid #007bff;
+    background-color: white;
     color: #007bff;
-    font-weight: bold;
-    width: 120px;
-    border-radius: 5px;
-    cursor: pointer;
 }
 
 ul {
